--- a/style.css
+++ b/style.css
@@ -1,29 +1,34 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 body {
   font-family: sans-serif;
   color: #3a3939;
   max-width: 1440px;
   margin: 3rem auto;
-  background-color: #dddbdb; }
+  background-color: #dddbdb;
+}
 
 .navigation {
   display: flex;
   height: 5rem;
   justify-content: space-between;
-  background-color: #fff; }
+  background-color: #fff;
+}
 
 .logo-box {
   display: flex;
   align-items: center;
-  margin-left: 2rem; }
-  .logo-box h2 {
-    letter-spacing: 4px;
-    font-size: 1.5rem;
-    color: #504f4f; }
+  margin-left: 2rem;
+}
+.logo-box h2 {
+  letter-spacing: 4px;
+  font-size: 1.5rem;
+  color: #504f4f;
+}
 
 .logo {
   border-radius: 100%;
@@ -31,60 +36,71 @@ body {
   transform: rotate(-45deg);
   background-clip: image;
   margin-right: 1rem;
-  filter: brightness(1.8) hue-rotate(-90deg); }
+  filter: brightness(1.8) hue-rotate(-90deg);
+}
 
 .nav-list {
   list-style: none;
   display: flex;
   align-items: center;
-  margin-right: 1rem; }
-  .nav-list li {
-    padding: 1rem 2rem;
-    transition: all 0.2s;
-    position: relative; }
-    .nav-list li::before {
-      content: "";
-      position: absolute;
-      left: 50%;
-      bottom: 0;
-      visibility: hidden;
-      width: 1%;
-      height: 0.5px;
-      background-color: violet;
-      transition: all 0.2s ease-out; }
-    .nav-list li:hover {
-      transform-origin: center;
-      cursor: pointer; }
-      .nav-list li:hover::before {
-        visibility: visible;
-        transform: scaleY(4) scaleX(70); }
+  margin-right: 1rem;
+}
+.nav-list li {
+  padding: 1rem 2rem;
+  transition: all 0.2s;
+  position: relative;
+}
+.nav-list li::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  visibility: hidden;
+  width: 1%;
+  height: 0.5px;
+  background-color: violet;
+  transition: all 0.2s ease-out;
+}
+.nav-list li:hover {
+  transform-origin: center;
+  cursor: pointer;
+}
+.nav-list li:hover::before {
+  visibility: visible;
+  transform: scaleY(4) scaleX(70);
+}
 
 .content {
   display: flex;
-  align-items: center; }
+  align-items: center;
+}
 
 .discriptions {
   width: 40vw;
   height: 100vh;
   background-color: #eee;
-  display: flex; }
+  display: flex;
+}
 
 .discription-box {
-  margin: auto 0.5rem; }
+  margin: auto 0.5rem;
+}
 
 .header-1 {
   margin-bottom: 2rem;
   margin-left: 2rem;
   font-size: 2.5rem;
   letter-spacing: 3px;
-  font-weight: 600; }
+  font-weight: 600;
+}
 
 .header-2 {
   margin-bottom: 2rem;
   margin-left: 2rem;
   margin-right: 1rem;
   color: #525151;
-  font-weight: 400; }
+  font-weight: 400;
+}
 
 .illustration {
   width: 60vw;
@@ -92,7 +108,8 @@ body {
   overflow: hidden;
   background-image: url(./img/background.jpeg);
   background-size: cover;
-  background-position: left; }
+  background-position: left;
+}
 
 .btn {
   padding: 1rem 3rem;
@@ -101,15 +118,18 @@ body {
   font-size: 1rem;
   color: white;
   margin-left: 2rem;
-  transition: all 0.2s; }
-  .btn:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 0.5rem 1rem #918f8f;
-    background-color: #fd6161;
-    transform: scale(1.05);
-    cursor: pointer; }
-  .btn:active {
-    transform: translateY(2px); }
+  transition: all 0.2s;
+}
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 0.5rem 1rem #918f8f;
+  background-color: #fd6161;
+  transform: scale(1.05);
+  cursor: pointer;
+}
+.btn:active {
+  transform: translateY(2px);
+}
 
 .popup {
   visibility: hidden;
@@ -121,50 +141,60 @@ body {
   left: 0;
   background-color: rgba(0, 0, 0, 0.733);
   color: #e4e3e3;
-  display: flex; }
-  .popup__content {
-    margin: auto;
-    padding: 0 3rem;
-    display: flex;
-    justify-content: center;
-    background-color: white;
-    max-width: 1500px;
-    height: 70%;
-    border-radius: 4px;
-    position: relative; }
-  .popup:target {
-    visibility: visible; }
+  display: flex;
+}
+.popup__content {
+  margin: auto;
+  padding: 0 3rem;
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  max-width: 1500px;
+  height: 70%;
+  border-radius: 4px;
+  position: relative;
+}
+.popup:target {
+  visibility: visible;
+}
 
 .btn--close {
   position: absolute;
   top: 0.5rem;
-  right: 1rem; }
-  .btn--close :link,
-  .btn--close :visited {
-    text-decoration: none;
-    font-size: 1.2rem;
-    text-decoration: none;
-    color: grey; }
-  .btn--close :hover {
-    color: violet; }
+  right: 1rem;
+}
+.btn--close :link,
+.btn--close :visited {
+  text-decoration: none;
+  font-size: 1.2rem;
+  text-decoration: none;
+  color: grey;
+}
+.btn--close :hover {
+  color: violet;
+}
 
 .card {
   margin: auto 1.5rem;
   height: 70%;
   width: 30%;
   overflow: hidden;
-  position: relative; }
-  .card-child {
-    height: 100%;
-    width: 100%;
-    transition: transform 0.8s; }
-  .card:hover .card-child {
-    transform: scale(1.2);
-    filter: blur(1px) brightness(0.7);
-    background-blend-mode: lighten; }
-  .card:hover .btn--order {
-    visibility: visible;
-    transform: translate(-50%, -50%); }
+  position: relative;
+}
+.card-child {
+  height: 100%;
+  width: 100%;
+  transition: transform 0.8s;
+}
+.card:hover .card-child {
+  transform: scale(1.2);
+  filter: blur(1px) brightness(0.7);
+  background-blend-mode: lighten;
+}
+.card:hover .btn--order {
+  visibility: visible;
+  transform: translate(-50%, -50%);
+}
 
 .btn--order {
   visibility: hidden;
@@ -181,31 +211,39 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, 350%);
-  transition: all 0.3s ease-out; }
+  transition: all 0.3s ease-out;
+}
 
 .bg-1 {
-  background-image: url(./img/food-1050813_1920.jpg);
+  background-image: url(./img/pancakes-2291908_1920.jpg);
   background-size: cover;
-  filter: brightness(0.8); }
+  filter: brightness(0.8);
+}
 
 .bg-2 {
   background-image: url(./img/meat-1155132_1920.jpg);
-  background-size: cover; }
+  background-size: cover;
+}
 
 .bg-3 {
-  background-image: url(./img/pancakes-2291908_1920.jpg);
-  background-size: cover; }
+  background-image: url(./img/food-1050813_1920.jpg);
+  background-size: cover;
+}
 
 .footer {
   display: flex;
-  flex-flow: column; }
-  .footer__logo-box {
-    display: flex;
-    margin: 3rem auto 0;
-    align-items: center; }
-  .footer__logo {
-    width: 6rem;
-    margin: 0 2rem; }
-  .footer__main {
-    display: flex;
-    margin-top: 3rem; }
+  flex-flow: column;
+}
+.footer__logo-box {
+  display: flex;
+  margin: 3rem auto 0;
+  align-items: center;
+}
+.footer__logo {
+  width: 6rem;
+  margin: 0 2rem;
+}
+.footer__main {
+  display: flex;
+  margin-top: 3rem;
+}
