--- a/style.css
+++ b/style.css
@@ -1,49 +1,174 @@
+@-webkit-keyframes textHover {
+  50% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+}
+
+@keyframes textHover {
+  50% {
+    -webkit-transform: scale(1.2);
+            transform: scale(1.2);
+  }
+  100% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+}
+
 html {
-    font-family: sans-serif;
-    box-sizing: border-box;
+  font-family: sans-serif;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+@media (max-width: 670px) {
+  html {
+    font-size: 66%;
+  }
+}
+
+@media (max-width: 425px) {
+  html {
+    font-size: 60%;
+  }
 }
 
 body {
-    padding: 0;
-    margin: 0;
-    color: #cdd0cb;
+  padding: 0;
+  margin: 0;
+  color: #3ac9bd;
 }
 
-.nav-bar {
-    width: 100vw;
-    background-color: #7c9473;
-    padding: 1rem 0rem;
+.container {
+  padding: 0 1rem;
+  margin: 0 auto;
+  max-width: 1200px;
+  position: relative;
+}
+
+.nav {
+  width: 100vw;
+  background-color: #212121;
+  position: relative;
+  padding: 2rem 0;
+}
+
+.nav--mini {
+  padding: 0;
+}
+
+.nav__list {
+  color: #148b8f;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+}
+
+.nav__list > *:hover {
+  color: #3ac9bd;
+  cursor: pointer;
+}
+
+.nav__list > *:active {
+  -webkit-animation: textHover 0.2s ease-in-out;
+          animation: textHover 0.2s ease-in-out;
+}
+
+.nav__list--mini {
+  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  top: 0;
+  right: 0;
+  font-size: 0.8rem;
+}
+
+.nav__items {
+  display: inline-block;
+  margin: 0 1rem;
+}
+
+.navbar__nav {
+  position: absolute;
+  display: inline-block;
+  right: 3rem;
+  top: 0.5rem;
 }
 
 .profile {
-    text-align: center;
-    position: relative;
-    left: 0;
+  position: relative;
+  display: inline-block;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  width: 40em;
+  height: 15rem;
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
-.profile-picture {
-    width: 8rem;
-    height: 8rem;
-    overflow: hidden;
-    border-radius: 50%;
-    background-image: url("./images/IMG_0291.JPG");
-    background-position: center;
-    background-size: cover;
-    margin: 1rem auto;
+.profile--mini {
+  top: 0;
+  left: 0;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+  width: 30rem;
+  height: 6rem;
 }
 
-.name {
-    margin: 0 auto;
+.profile__picture {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  width: 8rem;
+  height: 8rem;
+  overflow: hidden;
+  border-radius: 50%;
+  background-image: url("./images/IMG_0291.JPG");
+  background-position: center;
+  background-size: cover;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
 }
 
-.nav-list {
-    position: relative;
-    list-style: none;
-    padding: 0;
-    margin: 0 auto;
+.profile__picture--mini {
+  width: 4.3rem;
+  height: 4.3rem;
+  left: 0;
+  top: 50%;
+  -webkit-transform: translateX(0) translateY(-50%);
+          transform: translateX(0) translateY(-50%);
 }
 
-.nav-items {
-    display: inline-block;
-    margin: 0 1rem;
+.profile__name {
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  line-height: 0;
+  font-size: 2.5rem;
+  letter-spacing: 0.5rem;
+  position: absolute;
+  left: 9.5rem;
+  bottom: 2rem;
 }
+
+.profile__name--mini {
+  font-size: 1.4rem;
+  left: 6rem;
+  bottom: 1.8rem;
+  letter-spacing: 0.1rem;
+}
+/*# sourceMappingURL=main.css.map */
